a cleanup pass